--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: Setup GradleW
+      run:  gradle wrapper
     - name: Test with Gradle Wrapper
       run: ./gradlew check
 
