--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,16 +32,7 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-
-    - name: Setup GradleW
       run:  gradle wrapper
-    - name: Test with Gradle Wrapper
-      run: ./gradlew check
-
-    - name: Code Quality with Gradle Wrapper
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: ./gradlew sonar
       
     - name: Build with Gradle Wrapper
       run: ./gradlew build
@@ -53,11 +44,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env: 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Setup
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      - name: Setup GradleW
+        run:  gradle wrapper
+      - name: Test with Gradle Wrapper
+        run: ./gradlew check
 
+      - name: SonarCloud Scan with Gradle Wrapper
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonar
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
