--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  
+          fetch-depth: 0 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
           java-version: '21'
           distribution: 'temurin'
       - name: SonarCloud Setup
