--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,6 +54,8 @@ jobs:
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
         with:
           gradle-version: '8.5'
+      - name: Setup GradleW
+        run:  gradle wrapper
       - name: SonarCloud Scan with Gradle Wrapper
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
