--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,16 +50,18 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: SonarCloud Setup
-        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-        with:
-          gradle-version: '8.5'
+      # - name: SonarCloud Setup
+      #   uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+      #   with:
+      #     gradle-version: '8.5'
       - name: Setup GradleW
         run:  gradle wrapper
+      - name: Generate test report
+        run:  ./gradlew check jacocoTestReport
       - name: SonarCloud Scan with Gradle Wrapper
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew check sonar
+        run: ./gradlew sonar
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
