Prepare jacoco test report before sonar

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -57,11 +57,11 @@ jobs:
       - name: Setup GradleW
         run:  gradle wrapper
       - name: Generate test report
-        run:  ./gradlew check jacocoTestReport
+        run:  ./gradlew check
       - name: SonarCloud Scan with Gradle Wrapper
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar
+        run: ./gradlew jacocoTestReport sonar
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
