--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,7 +55,9 @@ jobs:
       - name: SonarCloud Scan with Gradle Wrapper
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew test jacocoTestReport sonar
+        run: ./gradlew test jacocoTestReport --warning-mode all
+      - name: Verify Test reports
+        run: (ls /home/runner/work/gradle-multimodule/gradle-multimodule/strings/build/reports/jacoco/test/jacocoTestReport.xml && echo 'yes') || echo 'no'
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
